src/shared/components/Style.css
body {
  margin: 0;
}

.navbar-custom,
.card,
.modal-header,
.modal-body,
.modal-footer {
  background-color: #fcedda;
  color: #f5816e;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16);
}
.nav-link {
  color: #f5816e;
  transition: 0.3s;
  opacity: 1;
}

.nav-link:hover {
  color: #f5816e;
  opacity: 0.6;
}

.code-editor-active,
.nav-link.active {
  background-color: #f5816e;
  color: #fcedda !important;
  border-radius: 5px;
}

.code-editor-link {
  padding-left: 3px;
  padding-right: 3px;
  padding-top: 12px;
}

.btn {
  background-color: #f5816e;
  color: #fcedda !important;
  opacity: 0.8;
  transition: 0.3s;
}
.btn:hover {
  color: #fcedda;
  opacity: 1;
}

.nav-icon {
  max-width: 80px;
  max-height: 100%;
  border: 2px solid #f5816e;
  border-radius: 1em;
}

h2,
h3,
h4,
h5,
p,
th,
tr:nth-child(2n) {
  background-color: #fcedda;
  color: #f5816e;
}

.doc-card,
.quiz-list-card,
.forum-list-card {
  transition: transform 0.3s ease-out;
}

.card a:hover,
.card button:hover {
  opacity: 1;
  color: #f5816e;
}

.doc-card:hover,
.quiz-list-card:hover,
.forum-list-card:hover {
  transition: transform 0.3s ease-out;
  transform: translate(-5px, -5px);
}

.alignment-container {
  margin-top: 5%;
}

a,
button {
  text-decoration: none;
  color: #f5816e;
  opacity: 0.6;
  transition: 0.3s;
}

.doc-card {
  height: 100%;
}

.input-form--invalid label,
.input-form--invalid p {
  color: red;
}

.input-form--invalid input,
.input-form--invalid textarea {
  border-color: red;
  background: #ffd1d1;
}

.login-card {
  box-shadow: none;
  border: none;
  color: black;
  font-weight: lighter;
  width: 25rem;
  height: 30rem;
}

.loh-carousel-card {
  width: 30rem;
  height: 30rem;
  border-radius: 10%;
}

.loh-carousel-image {
  width: 100%;
  height: 100%;
}

.anchor-link {
  background: none !important;
  border: none;
  padding: 0 !important;
  color: #f5816e;
  opacity: 0.6;
}

.anchor-link:hover {
  transition: 0.3s;
  opacity: 1;
}

.eye-icon {
  float: right;
  margin-right: 6px;
  position: relative;
  z-index: 2;
}

.top-pane {
  background-color: hsl(225, 6%, 25%);
}

.pane {
  height: 35vh;
  display: flex;
}

.editor-container {
  flex-grow: 1;
  flex-basis: 0;
  display: flex;
  flex-direction: column;
  padding: 0.5rem;
}

.editor-container.collapsed {
  flex-grow: 0;
}

.editor-container.collapsed .CodeMirror-scroll {
  position: absolute;
  overflow: hidden !important;
}

.editor-title {
  display: flex;
  justify-content: space-between;
  background-color: hsl(225, 6%, 13%);
  color: #ffffff;
  padding: 0.5rem 0.5rem 0.5rem 1rem;
  border-top-right-radius: 0.5rem;
  border-top-left-radius: 0.5rem;
}
.CodeMirror {
  height: 100% !important;
}

.code-mirror-wrapper {
  flex-grow: 1;
  border-bottom-right-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
  overflow: hidden;
}

div.hr-line {
  position: relative;
  display: inline-block;
  width: 100%;
  border-bottom: 1px solid rgb(228, 228, 228);
}

.codepen-modal {
  width: 185%;
}

iframe {
  height: 100%;
}

.overlay {
  background-color: #efefef;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  opacity: 0.5;
  filter: alpha(opacity=50);
}

.no-questions-card {
  width: 40% !important;
  margin-left: 33%;
}

.user-profile-image {
  width: 100%;
  height: 20rem;
  border: 1px solid #ccc;
  border-radius: 5%;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-bottom: 1rem;
}

.user-profile-image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.latest-scores-card {
  margin-top: 5%;
}
.latest-scores-card, .latest-questions-card, .no-user-questions-card, .no-scores-card {
  margin-right: 20%;
}

.ls-card-item, .lq-card-item {
  border-radius: 3%;
  box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(39, 40, 46, 0.2);
}

.login-input {
  width: 121%;
}

